--- a/Smaug.toml
+++ b/Smaug.toml
@@ -1,8 +1,8 @@
 [package]
 name = "maw"
-version = "1.4.1"
-homepage = "https://github.com/togetherbeer/maw"
-documentation = "https://github.com/togetherbeer/maw"
+version = "2.0.0"
+homepage = "https://github.com/awfulcooking/maw"
+documentation = "https://github.com/awfulcooking/maw"
 authors = ["mooff <mooff@tipjar.cool>"]
 keywords = ["inputs", "keyboard", "controller", "mouse", "controls", "dsl", "helper", "class"]
 
@@ -11,5 +11,5 @@ requires = [
 ]
 
 [dragonruby]
-version = "2.19"
+version = "5"
 edition = "standard"
